[tool.poetry]
name = "django-storages-s3-auth-bug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
django-storages = {extras = ["s3"], version = "^1.14.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
